<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_account"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/navigation_drawer_account" />
        <item
            android:id="@+id/navigation_drawer_payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/navigation_drawer_payment" />

        <item
            android:id="@+id/navigation_drawer_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/navigation_drawer_help" />

    </group>

</menu>
